escritura de dg en dbfuncional

--- a/index.html
+++ b/index.html
@@ -55,22 +55,13 @@
     <script src="node_modules/angular-ui-bootstrap/dist/ui-bootstrap.js"></script>
     <script src="node_modules/angular-ui-bootstrap/dist/ui-bootstrap-tpls.js"></script>
     <!-- Lib js -->
-    <script src="scripts/app.js"></script>
-    <script src="scripts/app.routes.js"></script>
-    <script src="scripts/controllers/index-controller.js"></script>
-    <script src="scripts/controllers/admin-Profile-controller.js"></script>
-    <script src="scripts/controllers/admin-AddProfile-controller.js"></script>
-    <script src="scripts/controllers/admin-projects-controller.js"></script>
-    <script src="scripts/controllers/admin-users-controller.js"></script>
-    <script src="scripts/controllers/admin-apps-controller.js"></script>
-    <script src="scripts/controllers/projects-controller.js"></script>
-    <script src="scripts/controllers/menu-login-controller.js"></script>
-    <script src="scripts/services/login-factory.js"></script>
-    <script src="scripts/services/devAppInfo-factory.js"></script>
-    <script src="scripts/services/database-factory.js"></script>
-
-    <script src="../app/services/link-factory.js"></script>
-
-    <!-- Import de firebase -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="app/app.js"></script>
+    <script src="app/app.routes.js"></script>
+    <script src="app/controllers/index-controller.js"></script>
+    <script src="app/controllers/menu-login-controller.js"></script>
+    <script src="app/controllers/modal-controller.js"></script>
+    <script src="app/services/login-factory.js"></script>
+    <script src="app/services/devAppInfo-factory.js"></script>
+    <script src="app/services/database-factory.js"></script>
+    <script src="app/services/link-factory.js"></script>
 </html>
