--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav class="navbar navbar-inverse navbar-fixed-top" ng-hide="hideHeaderSide()">
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-md-9">
+                    <div class="col-md-6">
                         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
                             <span class="sr-only">Toggle navigation</span>
                             <span class="icon-bar"></span>
@@ -20,24 +20,20 @@
                             <span class="icon-bar"></span>
                         </button>
                         <a class="navbar-brand" style="cursor:pointer;">
-                          <img src="../assets/img/logo-gps.png" alt="">
+                          <img src="img/Logo-ministerio.png" alt="">
                         </a>
                     </div>
                     <div class="col-md-3">  
-                        <div uib-dropdown on-toggle="toggled(open)" style="margin-top: 5px;float: right!important;">
-
-                            <a href="" id="simple-dropdown" uib-dropdown-toggle style="text-decoration:none;">
-                               usuario
-                                <img class="img-circle" ng-src="{{loggedUser.photoURL}}" height="40">
-                                <span class="caret"></span>
+                        <div style="margin-top: 5px;">
+                            <h4>BIENVENIDO: {{userName}}</h4>
+                        </div>
+                    </div>
+                    <div class="col-md-3">  
+                        <div style="margin-top: 5px;float: right!important;">
+                            <a href="" ng-click="userSignOut()">
+                                Cerrar Sesion 
+                                <span class="glyphicon glyphicon-log-out" aria-hidden="true"></span> 
                             </a>
-                            
-                            <ul class="dropdown-menu" uib-dropdown-menu aria-labelledby="simple-dropdown" style="left: -45px;text-align: right;">
-                                <li role="menuitem"><a href="" ng-click="goTo('adminProfile')">Cuenta <span class="glyphicon glyphicon-user" aria-hidden="true"></a></li>
-                                <li role="menuitem"><a href="" ng-click="goTo('adminUsers')">Notificaciones <span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span> </a></li>
-                                <li class="divider"></li>
-                                <li role="menuitem"><a href="" ng-click="userSignOut()">Cerrar Sesion <span class="glyphicon glyphicon-log-out" aria-hidden="true"></span> </a></li>
-                             </ul>
                         </div >
                     </div>
                 </div>
