admin v1.0 agregado solo los <md-divider>

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
                 Cerrar Sesion 
             </md-button>
         </md-toolbar>
+        <md-divider></md-divider>
         <div ng-view></div>            
     </body>
     <!-- Vendor js -->
